--- a/web-site/index.html
+++ b/web-site/index.html
@@ -242,7 +242,7 @@ Welcome Slider
                 <div class="content">
                     <h3>Refer U</h3>
                     <p>The above website’s purpose is to aid the senior citizen by providing doctors based on their current condition as they fill the form. The website provides an email to a loved one of the nearby physicians available. I utilized better doctor API service, with PHP and JavaScript to display the list of doctors.   </p>
-                    <a href="/final/index.php" class="btn btn-transparent" href="single-post.html">View</a>
+                    <a href="https://erotically-road.000webhostapp.com" class="btn btn-transparent" href="single-post.html">View</a>
                 </div>
               </div>
             </article>
