--- a/web-site/index.html
+++ b/web-site/index.html
@@ -203,7 +203,7 @@ Welcome Slider
             <div class="content">
               <h3><a href="">Currency Conversion</a></h3>
 				<p>The above website is a bootstrap theme using javascript and PHP, a backend server-side script allowing dynamic programming, to convert different currencies using an API that is up to date.</p>
-				<a href = "/p5/index.php" class="btn btn-transparent" href="single-post.html">View</a>
+				<a href = "http://currencyconversion.atwebpages.com" class="btn btn-transparent" href="single-post.html">View</a>
             </div>
           </div>
         </article>
