--- a/web-site/index.html
+++ b/web-site/index.html
@@ -309,7 +309,7 @@ Start Call To Action
 								<h3>Ahsan Ehani</h3>
 							</div>
 							<div class="client-comment">
-								<p>Currently a senior at Florida Atlantic University marjoring in Computer Engineering.</p>
+								<p>Currently a senior at Gerogia Institute of Technology getting my Masters in Computer Science.</p>
 							</div>
 						</div>
 						<!-- /client info -->
